feat: fully delete cms model

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -4,9 +4,40 @@ title: Webiny 5.42.0 Changelog
 description: See what's new in Webiny version 5.42.0.
 ---
 
-import { GithubRelease } from "@/components/GithubRelease";
+import {Alert} from "@/components/Alert";
+import {GithubRelease} from "@/components/GithubRelease";
 
 <GithubRelease version={"5.42.0"} />
+
+## Headless CMS
+
+### Fully Delete a Content Model and All Entries ([#4451](https://github.com/webiny/webiny-js/pull/4451))
+
+In this release, we have added the ability to fully delete a content model and all of its entries.
+
+When a user wants to delete a content model, it will start a process that will delete all of the content model's entries. Once all entries are deleted, the content model will be deleted as well. During that process, model is marked as being deleted and users cannot change it or its entries.
+
+
+<Alert type="danger">
+  This process is irreversible.
+</Alert>
+
+## Development
+
+### Yarn 4.6.0 ([#4439](https://github.com/webiny/webiny-js/pull/4439) [#4482](https://github.com/webiny/webiny-js/pull/4482))
+
+In this release, we have updated the `Yarn` version to `4.6.0`.
+
+User projects will get updated when they run the `yarn webiny upgrade` command.
+
+### Dependencies ([#4353](https://github.com/webiny/webiny-js/pull/4353) [#4338](https://github.com/webiny/webiny-js/pull/4338) [#4426](https://github.com/webiny/webiny-js/pull/4426) [#4430](https://github.com/webiny/webiny-js/pull/4430))
+
+We have updated a lot of Webiny dependencies in this release. We will not list them here, because the list is quite long, and most of them do not affect our users projects.
+
+If there are any out of date (out of sync) packages in our users project, they will be informed about that during the upgrade process, and will be given an option to update them to the same version Webiny uses.
+
+To find out more about that part of the upgrade process, please read this article.
+
 
 ## Other Improvements
 
@@ -15,5 +46,6 @@ import { GithubRelease } from "@/components/GithubRelease";
 We've added the `MailerContext` to the `Context` interface in the `@webiny/api-serverless-cms` package.
 
 With this change, developers can now access the `context.mailer` object and all of its methods in a type-safe way.
+
 
 
