--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -42,7 +42,7 @@ To find out more about that part of the upgrade process, please read this articl
 
 We've added the `MailerContext` to the `Context` interface in the `@webiny/api-serverless-cms` package.
 
-With this change, developers can now access the `context.mailer` object and all of its methods in a type-safe way.
+With this change, upon writing backend extensions, developers can now access the `context.mailer` object and all of its methods in a type-safe way.
 
 
 
