feat: user project upgrade

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -36,7 +36,7 @@ We have updated a lot of Webiny dependencies in this release. We will not list t
 
 If there are any out of date (out of sync) packages in our users project, they will be informed about that during the upgrade process, and will be given an option to update them to the same version Webiny uses.
 
-To find out more about that part of the upgrade process, please read this article.
+To find out more about that part of the upgrade process, please read [this article](/docs/core-development-concepts/basics/user-project-upgrade).
 
 ### `@webiny/api-serverless-cms` - Added `MailerContext` to `Context` Interface ([#4481](https://github.com/webiny/webiny-js/pull/4481))
 
