fix: info about version specific steps

--- a/docs/developer-docs/5.42.x/core-development-concepts/basics/user-project-upgrade.mdx
+++ b/docs/developer-docs/5.42.x/core-development-concepts/basics/user-project-upgrade.mdx
@@ -73,3 +73,6 @@ Do you still want to continue with the project upgrade and skip updating depende
 
 If user chooses to continue without updating the dependencies, the upgrade process will continue, but it is not recommended.
 
+## Version Specific Steps
+
+All steps after the dependency check are specific to the version user is upgrading to.
