feat: add Okta OIDC app integration guide

--- a/docs/developer-docs/5.40.x/enterprise/okta-oidc-app-integration.mdx
+++ b/docs/developer-docs/5.40.x/enterprise/okta-oidc-app-integration.mdx
@@ -17,6 +17,7 @@ import mapGroups4 from "./assets/okta-oidc-app-integration/map-groups-4.png";
 import mapGroups5 from "./assets/okta-oidc-app-integration/map-groups-5.png";
 import mapGroups6 from "./assets/okta-oidc-app-integration/map-groups-6.png";
 import mapGroups7 from "./assets/okta-oidc-app-integration/map-groups-7.png";
+import mapGroups8 from "./assets/okta-oidc-app-integration/map-groups-8.png";
 import mapClaim1 from "./assets/okta-oidc-app-integration/map-claim-1.png";
 import mapClaim2 from "./assets/okta-oidc-app-integration/map-claim-2.png";
 import mapClaim3 from "./assets/okta-oidc-app-integration/map-claim-3.png";
@@ -73,11 +74,9 @@ The important configuration parameters are highlighted in red. **Variable name**
 
 <Image src={mapGroups3} />
 
-<Alert type="info" title="What are the values I need to use in the enum?">
-
 The value of roles are actually role _slugs_, taken from the Webiny Admin app. To manage Webiny Roles, navigate to **Settings -> Access Management -> Roles** in your Webiny Admin app.
 
-</Alert>
+<Image src={mapGroups8} />
 
 ### Assign Okta groups to the OIDC app
 
@@ -119,6 +118,10 @@ Make sure your claim is included in **ID Token**. The `appuser.webiny_role` expr
 
 To test whether the configuration is correct, you can use the **Token Preview** tab of the authorization server. Select your OIDC app, a grant type of **Authorization Code**, and a user you want to test with. You also need to select at least one scope to generate the token preview. The scopes used by the actual app are `openid`, `profile`, and `email`.
 
-If everything is configured correctly, your `idToken` will contain a `webiny_role` claim, and its value will correspond to the **Webiny Role** custom attribute, which was assigned to the Okta group earlier. 
+If everything is configured correctly, your `idToken` will contain a `webiny_role` claim, and its value will correspond to the **Webiny Role** custom attribute, which was assigned to the Okta group earlier.
 
 <Image src={mapClaim4} />
+
+### Final Steps
+
+At this point, the basic setup of your Okta OIDC app can be considered done. However, to connect all the dots, you need to map this token claim to the identity object in your [main Okta security configuration](/docs/{version}/enterprise/okta-integration#3-configure-okta-in-the-graph-ql-api).
