docs: add Full-Screen Editor

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -6,6 +6,7 @@ description: See what's new in Webiny version 5.42.0.
 
 import {Alert} from "@/components/Alert";
 import {GithubRelease} from "@/components/GithubRelease";
+import hcmsFullscreenEditor from "./assets/hcms-fullscreen-editor.gif";
 
 <GithubRelease version={"5.42.0"} />
 
@@ -17,10 +18,23 @@ In this release, we have added the ability to fully delete a content model and a
 
 When a user wants to delete a content model, it will start a process that will delete all of the content model's entries. Once all entries are deleted, the content model will be deleted as well. During that process, model is marked as being deleted and users cannot change it or its entries.
 
-
 <Alert type="danger">
   This process is irreversible.
 </Alert>
+
+### Full-Screen Editor ([#4443](https://github.com/webiny/webiny-js/pull/4443))
+
+We’ve introduced a new full-screen editor for Headless CMS content entries, designed to provide a more spacious and user-friendly editing experience. This update enhances usability on smaller screens and offers a streamlined interface for live previews, making content editing more efficient.
+
+Additionally, the new design emphasizes improved focus on the content itself by reducing distractions and maximizing the workspace. This ensures that content creators can fully concentrate on their work without unnecessary visual clutter.
+
+The new design also aligns with the page builder editor, delivering a consistent experience across tools.
+
+<Image src={hcmsFullscreenEditor} title={"Full-Screen Editor for Headless CMS Entries"} />
+
+Please note that the live preview extension might require updates to remain compatible with the new editor. For more information on making the necessary changes, see [this pull request](https://github.com/webiny/webiny-examples/pull/173).
+
+If needed, the previous editor can be restored by enabling the `cmsLegacyEntryEditor: true` feature flag.
 
 ## Development
 
