feat: add Okta OIDC app integration guide

--- a/docs/developer-docs/5.40.x/enterprise/okta-oidc-app-integration.mdx
+++ b/docs/developer-docs/5.40.x/enterprise/okta-oidc-app-integration.mdx
@@ -124,4 +124,4 @@ If everything is configured correctly, your `idToken` will contain a `webiny_rol
 
 ### Final Steps
 
-At this point, the basic setup of your Okta OIDC app can be considered done. However, to connect all the dots, you need to map this token claim to the identity object in your [main Okta security configuration](/docs/{version}/enterprise/okta-integration#3-configure-okta-in-the-graph-ql-api).
+At this point, the basic setup of your Okta OIDC app can be considered done. However, for all of this to work, you need to map this token claim to the identity object in your [main Okta security configuration](/docs/{version}/enterprise/okta-integration#3-configure-okta-in-the-graph-ql-api).
