refactor: add note about dependency sync

--- a/docs/developer-docs/5.42.x/core-development-concepts/basics/user-project-upgrade.mdx
+++ b/docs/developer-docs/5.42.x/core-development-concepts/basics/user-project-upgrade.mdx
@@ -4,8 +4,6 @@ title: User Project Upgrade
 description: Learn about how to do a project upgrade
 ---
 
-
-
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="What you'll learn">
@@ -47,7 +45,16 @@ Note that this step will not show if there are no breaking changes in the versio
 
 ### 2. Check User Project Dependency Versions Against the Webiny Dependency Versions
 
-Next step, which will always be executed, is to check if the user project dependencies are up to date with the Webiny dependencies. If they are not, the user will be prompted to update them.
+Next step, which will always be executed, is to check if the user project dependencies are in sync with the Webiny dependencies. If they are not, the user will be prompted to update them.
+
+<Alert>
+  
+This does not mean that we use newer versions of the dependencies than our users do in their projects.
+
+We ship Webiny with the dependencies that are working with our code. If it is possible, our users should keep their dependencies in sync with Webiny ones to avoid any unexpected problems.
+  
+</Alert>
+
 ```text
 webiny warning: Found dependencies that are out of sync. Please sync them before continuing with the upgrade process...
 package.json files which have dependencies out of sync:
