--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -4,6 +4,7 @@ title: Webiny 5.42.0 Changelog
 description: See what's new in Webiny version 5.42.0.
 ---
 
+
 import {Alert} from "@/components/Alert";
 import {GithubRelease} from "@/components/GithubRelease";
 import hcmsFullscreenEditor from "./assets/hcms-fullscreen-editor.gif";
@@ -43,6 +44,19 @@ If needed, the previous editor can be restored by enabling the `cmsLegacyEntryEd
 In this release, we have updated the `Yarn` version to `4.6.0`.
 
 User projects will get updated when they run the `yarn webiny upgrade` command.
+
+## Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
+
+We have added a new `Logger` into to the system. This logger is primarily for our internal use, so we can log errors and other information to a DynamoDB Log table (new table).
+
+<Alert type="warning">
+  
+  This feature will change in the future. We cannot guarantee the data integrity after the system upgrade (in minor version, eg. 5.42.x to 5.43.0)
+  
+</Alert>
+
+If you want to use logger in your project, you can read about it in [this article](/docs/core-development-concepts/basics/logger).
+
 
 ### Dependencies ([#4353](https://github.com/webiny/webiny-js/pull/4353) [#4338](https://github.com/webiny/webiny-js/pull/4338) [#4426](https://github.com/webiny/webiny-js/pull/4426) [#4430](https://github.com/webiny/webiny-js/pull/4430))
 
