fix: update items

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -45,7 +45,7 @@ In this release, we have updated the `Yarn` version to `4.6.0`.
 
 User projects will get updated when they run the `yarn webiny upgrade` command.
 
-## Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
+### Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
 
 We have added a new `Logger` into to the system. This logger is primarily for our internal use, so we can log errors and other information to a DynamoDB Log table (new table).
 
@@ -57,7 +57,6 @@ We have added a new `Logger` into to the system. This logger is primarily for ou
 
 If you want to use logger in your project, you can read about it in [this article](/docs/core-development-concepts/basics/logger).
 
-
 ### Dependencies ([#4353](https://github.com/webiny/webiny-js/pull/4353) [#4338](https://github.com/webiny/webiny-js/pull/4338) [#4426](https://github.com/webiny/webiny-js/pull/4426) [#4430](https://github.com/webiny/webiny-js/pull/4430))
 
 We have updated a lot of Webiny dependencies in this release. We will not list them here, because the list is quite long, and most of them do not affect our users projects.
@@ -68,9 +67,23 @@ To find out more about that part of the upgrade process, please read [this artic
 
 ### `@webiny/api-serverless-cms` - Added `MailerContext` to `Context` Interface ([#4481](https://github.com/webiny/webiny-js/pull/4481))
 
-We've added the `MailerContext` to the `Context` interface in the `@webiny/api-serverless-cms` package.
+We've added the `MailerContext` to the `Context` interface that's exported from the `@webiny/api-serverless-cms` package.
 
-With this change, upon writing backend extensions, developers can now access the `context.mailer` object and all of its methods in a type-safe way.
+With this change, upon writing backend extensions, developers can now access the `context.mailer` object and all of its methods in a type-safe way. For example:
 
+```ts
+import { createContextPlugin } from "@webiny/api-serverless-cms";
+
+export const createExtension = () => {
+  return [
+    createContextPlugin(context => {
+      // Previously, accessing the `mailer` object would cause a TypeScript error.
+      context.mailer.sendMail({
+        to: "..."
+      });
+    })
+  ];
+};
+```
 
 
