chore: update background task info

--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-handle-a-background-task-run.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/how-to-handle-a-background-task-run.mdx
@@ -102,6 +102,11 @@ const myTask = createTaskDefinition({
 });
 ```
 
+Interface for the response object is defined [here](https://github.com/webiny/webiny-js/blob/84d28b3e100a0317a0c3d265d06efaea50971cd3/packages/tasks/src/response/abstractions/TaskResponse.ts#L62).
+- `message` - optional message you want to store when the task is done
+- `output` - optional output object you want to store when the task is done
+
+
 #### The `continue` Method
 
 This method signalizes that the task has not finished its job and that the Step Function should continue running the Lambda handler.
