fix: logger new table deployment

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -47,7 +47,7 @@ User projects will get updated when they run the `yarn webiny upgrade` command.
 
 ### Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
 
-We have added a new `Logger` into to the system. This logger is primarily for our internal use, so we can log errors and other information to a DynamoDB Log table (new table).
+We have added a new `Logger` into to the system. This logger is primarily for our internal use, so we can log errors and other information to a DynamoDB Log table (new table is being deployed).
 
 <Alert type="warning">
   
