feat: add update yarn step into upgrade guide

--- a/docs/release-notes/5.42.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.42.0/upgrade-guide.mdx
@@ -4,8 +4,10 @@ title: Upgrade from 5.41.x to 5.42.0
 description: Learn how to upgrade Webiny from 5.41.x to 5.42.0.
 ---
 
-import { Alert } from "@/components/Alert";
-import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
+
+
+import {Alert} from "@/components/Alert";
+import {AdditionalNotes} from "@/components/upgrade/AdditionalNotes";
 
 <Alert type="success" title="What you’ll learn">
 
@@ -32,7 +34,25 @@ yarn up "@webiny/*@5.42.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return **5.42.0**.
 
-### 2. Run the Upgrade Command
+### 2. Upgrade Yarn to 4.6.0
+
+<Alert type="warning">
+  
+  This is really important step, as the project upgrade will not work without the correct Yarn version.
+  
+</Alert>
+
+We have updated the `Yarn` version to `4.6.0` and we cannot update it automatically in the project, so you need to do it manually.
+
+To upgrade Yarn to version `4.6.0`, run the following command:
+
+```bash
+yarn set version 4.6.0 && yarn install
+````
+
+This will effectively set your project Yarn to v4.6.0 and install all the packages with that Yarn version.
+
+### 3. Run the Upgrade Command
 
 The next step is to run the project upgrade:
 
@@ -40,7 +60,7 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-### 3. Deploy Your Project
+### 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
