feat: build project after update

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -43,7 +43,7 @@ If needed, the previous editor can be restored by enabling the `cmsLegacyEntryEd
 
 In this release, we have updated the `Yarn` version to `4.6.0`.
 
-User projects will get updated when they run the `yarn webiny upgrade` command.
+Check out the [upgrade guide](docs/release-notes/5.42.0/upgrade-guide) to find out more.
 
 ### Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
 
