--- a/docs/release-notes/5.42.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.42.0/upgrade-guide.mdx
@@ -60,7 +60,42 @@ The next step is to run the project upgrade:
 yarn webiny upgrade
 ```
 
-### 4. Deploy Your Project
+### 4. Breaking Changes❗
+This release contains a couple of breaking changes that might affect your project.
+
+We have updated a lot of dependencies, and we are syncing Webiny dependency versions with your project, so they might cause some issues.
+
+#### 4.1. If You Have `@editorjs/*` Packages In Your Project
+
+If there are packages starting with `@editorjs/*` in your project, they will probably produce an error during Typescript compile time.
+
+We have added a code mode in our update script, but if there are any leftovers, please sort them out before deploying.
+If there are any issues, it is due to the `// ts-expect-error` comment in the code.
+
+### Build Your Project
+
+After the upgrade, build your project (`api`, `admin` and `website`):
+
+##### API
+```bash
+yarn webiny build apps/api --env=YOUR_ENVIRONMENT
+```
+##### Admin UI
+```bash
+yarn webiny build apps/admin --env=YOUR_ENVIRONMENT
+```
+##### Website
+```bash
+yarn webiny build apps/website --env=YOUR_ENVIRONMENT
+```
+
+##### All at Once
+
+```bash
+yarn webiny build apps/api --env=YOUR_ENVIRONMENT && yarn webiny build apps/admin --env=YOUR_ENVIRONMENT && yarn webiny build apps/website --env=YOUR_ENVIRONMENT
+```
+
+### 6. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
