--- a/docs/release-notes/5.42.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.42.0/upgrade-guide.mdx
@@ -78,21 +78,21 @@ After the upgrade, build your project (`api`, `admin` and `website`):
 
 ##### API
 ```bash
-yarn webiny build apps/api --env=YOUR_ENVIRONMENT
+yarn webiny build api --env=YOUR_ENVIRONMENT
 ```
 ##### Admin UI
 ```bash
-yarn webiny build apps/admin --env=YOUR_ENVIRONMENT
+yarn webiny build admin --env=YOUR_ENVIRONMENT
 ```
 ##### Website
 ```bash
-yarn webiny build apps/website --env=YOUR_ENVIRONMENT
+yarn webiny build website --env=YOUR_ENVIRONMENT
 ```
 
 ##### All at Once
 
 ```bash
-yarn webiny build apps/api --env=YOUR_ENVIRONMENT && yarn webiny build apps/admin --env=YOUR_ENVIRONMENT && yarn webiny build apps/website --env=YOUR_ENVIRONMENT
+yarn webiny build api --env=YOUR_ENVIRONMENT && yarn webiny build admin --env=YOUR_ENVIRONMENT && yarn webiny build website --env=YOUR_ENVIRONMENT
 ```
 
 ### 6. Deploy Your Project
