feat: api gateway

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -5,6 +5,8 @@ description: See what's new in Webiny version 5.42.0.
 ---
 
 
+
+
 import {Alert} from "@/components/Alert";
 import {GithubRelease} from "@/components/GithubRelease";
 import hcmsFullscreenEditor from "./assets/hcms-fullscreen-editor.gif";
@@ -86,4 +88,15 @@ export const createExtension = () => {
 };
 ```
 
+## Infrastructure
 
+### Default Throttling Limits for Api Gateway Deployments ([#4496](https://github.com/webiny/webiny-js/pull/4496))
+
+We have added default throttling limits for API Gateway deployments:
+
+- `burst limit` - 5000 - maximum number of concurrent request
+- `rate limit` - 10000 - maximum number of allowed requests per second
+
+This is due to the [Terraform issue](https://github.com/terraform-aws-modules/terraform-aws-apigateway-v2/issues/45), which can cause a 429 error (too many requests).
+
+Feel free to modify these limits in your `webiny.application.ts` configuration files.
