fix: api gateway

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -100,3 +100,5 @@ We have added default throttling limits for API Gateway deployments:
 This is due to the [Terraform issue](https://github.com/terraform-aws-modules/terraform-aws-apigateway-v2/issues/45), which can cause a 429 error (too many requests).
 
 Feel free to modify these limits in your `webiny.application.ts` configuration files.
+
+We decided not to add these limits to previous versions of Webiny, because it would change infrastructure deployment - which is something we are not keen on doing in patch releases.
