--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -59,9 +59,9 @@ We have added a new `Logger` into to the system. This logger is primarily for ou
 
 If you want to use logger in your project, you can read about it in [this article](/docs/core-development-concepts/basics/logger).
 
-### Dependencies ([#4353](https://github.com/webiny/webiny-js/pull/4353) [#4338](https://github.com/webiny/webiny-js/pull/4338) [#4426](https://github.com/webiny/webiny-js/pull/4426) [#4430](https://github.com/webiny/webiny-js/pull/4430))
+### Updated Dependencies ([#4353](https://github.com/webiny/webiny-js/pull/4353) [#4338](https://github.com/webiny/webiny-js/pull/4338) [#4426](https://github.com/webiny/webiny-js/pull/4426) [#4430](https://github.com/webiny/webiny-js/pull/4430))
 
-We have updated a lot of Webiny dependencies in this release. We will not list them here, because the list is quite long, and most of them do not affect our users projects.
+We have updated a number of Webiny dependencies in this release. We will not list them here, because the list is quite long, and most of them do not affect our users projects.
 
 If there are any out of date (out of sync) packages in our users project, they will be informed about that during the upgrade process, and will be given an option to update them to the same version Webiny uses.
 
@@ -88,9 +88,23 @@ export const createExtension = () => {
 };
 ```
 
-## Infrastructure
+### Removed `apps/api/graphql/src/types.ts` File (New Projects Only)
 
-### Default Throttling Limits for Api Gateway Deployments ([#4496](https://github.com/webiny/webiny-js/pull/4496))
+From now on, all new Webiny projects won't include the [`apps/api/graphql/src/types.ts`](https://github.com/webiny/webiny-js/blob/5.41.5/packages/cwp-template-aws/template/ddb/apps/api/graphql/src/types.ts) file anymore.
+
+This is because, basically, the file was used to export the `Context` interface, which users could then utilize while developing backend extensions. However, since the file can now be directly imported from the `@webiny/api-serverless-cms` package, we've decided to remove it.
+
+Note that this change is not a breaking change, as, for existing projects, the `types.ts` file will remain in place. However, for new projects, the file won't be included anymore.
+
+<Alert>
+
+  For existing projects, although not required, we recommend importing the `Context` interface from the `@webiny/api-serverless-cms` package, as it's the most up-to-date and type-safe way to do so.
+  
+</Alert>
+
+## Deployments
+
+### Default Throttling Limits for Amazon Api Gateway Deployments ([#4496](https://github.com/webiny/webiny-js/pull/4496))
 
 We have added default throttling limits for API Gateway deployments:
 
@@ -99,6 +113,16 @@ We have added default throttling limits for API Gateway deployments:
 
 This is due to the [Terraform issue](https://github.com/terraform-aws-modules/terraform-aws-apigateway-v2/issues/45), which can cause a 429 error (too many requests).
 
-Feel free to modify these limits in your `webiny.application.ts` configuration files.
+Of course, if needed, you can further modify these limits in your `webiny.application.ts` configuration files. 
 
-We decided not to add these limits to previous versions of Webiny, because it would change infrastructure deployment - which is something we are not keen on doing in patch releases.
+<Alert>
+
+  Check out the [Modify Cloud Infrastructure](/docs/infrastructure/basics/modify-cloud-infrastructure) to learn more about modifying the cloud infrastructure that Webiny deploys.
+
+</Alert>
+
+<Alert type={"warning"}>
+
+  We decided not to add these changes to previous versions of Webiny. Cloud infrastructure-related changes is not something we tend to introduce via patch releases. In case you need these changes in your project, please upgrade to the latest version of Webiny, or manually apply the changes to your project.
+
+</Alert>
