fix: polish changelog

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -43,9 +43,9 @@ If needed, the previous editor can be restored by enabling the `cmsLegacyEntryEd
 
 ### Yarn 4.6.0 ([#4439](https://github.com/webiny/webiny-js/pull/4439) [#4482](https://github.com/webiny/webiny-js/pull/4482))
 
-In this release, we have updated the `Yarn` version to `4.6.0`.
+In this release, we have updated Yarn to **4.6.0**. This was done to ensure compatibility with the latest version of Yarn and to take advantage of the latest features and improvements. 
 
-Check out the [upgrade guide](docs/release-notes/5.42.0/upgrade-guide) to find out more.
+To learn more, check out the [upgrade guide](docs/release-notes/5.42.0/upgrade-guide).
 
 ### Logger ([#4366](https://github.com/webiny/webiny-js/pull/4366))
 
@@ -67,6 +67,20 @@ If there are any out of date (out of sync) packages in our users project, they w
 
 To find out more about that part of the upgrade process, please read [this article](/docs/core-development-concepts/basics/user-project-upgrade).
 
+### Removed `apps/api/graphql/src/types.ts` File (New Projects Only)
+
+From now on, all new Webiny projects won't include the [`apps/api/graphql/src/types.ts`](https://github.com/webiny/webiny-js/blob/5.41.5/packages/cwp-template-aws/template/ddb/apps/api/graphql/src/types.ts) file anymore.
+
+This is because, basically, the file was used to export the `Context` interface, which users could then utilize while developing backend extensions. However, since the file can now be directly imported from the `@webiny/api-serverless-cms` package, we've decided to remove it.
+
+Note that this change is not a breaking change, as, for existing projects, the `types.ts` file will remain in place. However, for new projects, the file won't be included anymore.
+
+<Alert>
+
+  For existing projects, although not required, we recommend importing the `Context` interface from the `@webiny/api-serverless-cms` package, as it's the most up-to-date and type-safe way to do so.
+  
+</Alert>
+
 ### `@webiny/api-serverless-cms` - Added `MailerContext` to `Context` Interface ([#4481](https://github.com/webiny/webiny-js/pull/4481))
 
 We've added the `MailerContext` to the `Context` interface that's exported from the `@webiny/api-serverless-cms` package.
@@ -87,20 +101,6 @@ export const createExtension = () => {
   ];
 };
 ```
-
-### Removed `apps/api/graphql/src/types.ts` File (New Projects Only)
-
-From now on, all new Webiny projects won't include the [`apps/api/graphql/src/types.ts`](https://github.com/webiny/webiny-js/blob/5.41.5/packages/cwp-template-aws/template/ddb/apps/api/graphql/src/types.ts) file anymore.
-
-This is because, basically, the file was used to export the `Context` interface, which users could then utilize while developing backend extensions. However, since the file can now be directly imported from the `@webiny/api-serverless-cms` package, we've decided to remove it.
-
-Note that this change is not a breaking change, as, for existing projects, the `types.ts` file will remain in place. However, for new projects, the file won't be included anymore.
-
-<Alert>
-
-  For existing projects, although not required, we recommend importing the `Context` interface from the `@webiny/api-serverless-cms` package, as it's the most up-to-date and type-safe way to do so.
-  
-</Alert>
 
 ## Deployments
 
