fix: polish changelog

--- a/docs/release-notes/5.42.0/changelog.mdx
+++ b/docs/release-notes/5.42.0/changelog.mdx
@@ -17,12 +17,16 @@ import hcmsFullscreenEditor from "./assets/hcms-fullscreen-editor.gif";
 
 ### Fully Delete a Content Model and All Entries ([#4451](https://github.com/webiny/webiny-js/pull/4451))
 
-In this release, we have added the ability to fully delete a content model and all of its entries.
+We have introduced the ability to fully delete a content model and all of its entries.
 
 When a user wants to delete a content model, it will start a process that will delete all of the content model's entries. Once all entries are deleted, the content model will be deleted as well. During that process, model is marked as being deleted and users cannot change it or its entries.
 
 <Alert type="danger">
-  This process is irreversible.
+
+  Note that this process is irreversible. Once the content model and its entries are deleted, they cannot be restored. 
+  
+  Please use this feature with caution.
+
 </Alert>
 
 ### Full-Screen Editor ([#4443](https://github.com/webiny/webiny-js/pull/4443))
