fix: endpoint for tasks

--- a/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/background-task-management.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/background-tasks/background-task-management.mdx
@@ -4,6 +4,7 @@ title: Background Task Management
 description: You will learn about Background Tasks, how to create new definitions, how to trigger them and how to handle the task run.
 ---
 
+
 import {Alert} from "@/components/Alert";
 import {CanIUseThis} from "@/components/CanIUseThis";
 import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
@@ -25,6 +26,8 @@ import {WhatYouWillLearn} from "@/components/WhatYouWillLearn";
 ## GraphQL API
 
 The Background Tasks do not have a section in the Admin UI yet, so they are accessible only via the GraphQL API.
+
+The endpoint for the tasks is `/graphql`.
 
 ### Queries
 
